--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <title>Furniture Homepage</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-33ZEP9VF9C"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GQ42N44XQD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-33ZEP9VF9C');
+  gtag('config', 'G-GQ42N44XQD');
+</script>
 </script>
 </head>
 <body>
